--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -93,8 +93,15 @@ select {
   font-size: 16px;
 }
 
-.close-icon,
-.icon {
+.close-icon{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
+  font-size: 18px;
+  cursor: pointer;
+}
+.input-container .icon{
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
