--- a/src/Css/Answer.css
+++ b/src/Css/Answer.css
@@ -86,11 +86,12 @@
     width: 80%;
     margin-left: 98px;
 }
-.icon-image{
+.icon-image img{
     width: 40px;
     height: 40px;
     background-color: #ccc;
     border-radius: 50%;
+    border: 1px solid #ccc;
 }
 .user .icon{
     display: flex;
@@ -138,16 +139,15 @@
   
   .stars-container {
     position: absolute;
-    top: 0;
-    left: 100px;
+    top: -20px;
+    left: 75px;
     display: flex;
     background-color: white;
-    /* border: 1px solid #ddd; */
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     z-index: 10;
-    margin: 0;
+    margin: 10px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    
   }
   
   .star-item {
