--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -50,18 +50,27 @@
   color: #007bff;
 }
 
-.dropdown-menu {
-  width: 250px;
-  height: 65px;
+.infor {
+  width: 200px;
   border-radius: 8px; 
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
   margin-left: 200px;
   background-color: rgba(175, 175, 175, 0.87);
-  
+  padding: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
-
-.dropdown-item {
+li{
+  list-style: none;
+  cursor: pointer;
+}
+.infor-email .infor-logout {
   padding: 10px 15px; /* Điều chỉnh padding */
   text-decoration: none;
   color: black;
+  margin-left: 10px;
+}
+.infor-email{
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 5px;
 }
