--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -1,6 +1,6 @@
 /* login-container */
 .login-container {
-  width: 400px;
+  width: 530px;
   margin: 70px auto;
   padding: 30px;
   border: 1px solid #ccc;
@@ -28,15 +28,15 @@
   gap: 10px;
 }
 
-.google-button,
+
 .fpt-button {
-  padding: 12px 20px;
   width: 100%;
-  border: none;
-  border-radius: 18px ;
+  height: 40px;
+  border: #dddcde 1px solid;
+  border-radius: 4px;
   cursor: pointer;
   font-weight: bold;
-  background-color: whitesmoke;
+  background-color: white;
   color: black;
   text-align: center;
 }
@@ -111,8 +111,7 @@ select {
 }
 
 .login-button {
-  background-color: #4CAF50;
-  /* Green */
+  background-color: #4664c7;
   border: none;
   color: white;
   padding: 12px 20px;
@@ -120,7 +119,7 @@ select {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
   width: 100%;
 }
